# magi-llm

./: README.md  pyproject.toml
src/: decision_maker.py  magi.py  magi_network.py  main.py
src/machina/: balthazar.py  casper.py  machina.py  melchior.py
